AC_PREREQ(2.71)
AC_INIT([try], [0.2.0], [https://github.com/binpash/try/issues])

AC_CONFIG_SRCDIR([try])
AC_REQUIRE_AUX_FILE([utils/try-commit.c])
AC_REQUIRE_AUX_FILE([docs/try.1.md])

# build tools
AC_PROG_CC
AC_PROG_INSTALL

# CFLAGS and CPPFLAGGS
if [ -z "$CFLAGS " ]
then
        AUTO_CFLAGS="-g -Wall -O2"
else
        AUTO_CFLAGS=""
fi
AUTO_CPPFLAGS=""

CFLAGS=${CFLAGS-"$AUTO_CFLAGS"}
CPPFLAGS=${CPPFLAGS-"$AUTO_CPPFLAGS"}

AC_SUBST(CFLAGS)
AC_SUBST(CPPFLAGS)

AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_FUNC_FORK
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK

AC_CHECK_HEADERS([fcntl.h])
AC_CHECK_HEADERS([unistd.h])
AC_CHECK_FUNCS([regcomp])
AC_CHECK_FUNCS([strerror])

AC_PROG_LN_S
AC_PROG_AWK

AC_CONFIG_FILES([Makefile:Makefile.in])
AC_OUTPUT
