[package]
name = "incr"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bincode = { version = "2.0.1", features = ["serde"] }
bytes = "1.11.0"
clap = { version = "4.5", features = ["derive"] }
fastcdc = "3.2.1"
libc = "0.2.176"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
shlex = "1.3.0"
time = { version = "0.3.44", features = ["formatting", "local-offset", "macros"] }
xxhash-rust = { version = "0.8.15", features = ["std", "xxh3"] }
zstd = "0.13.3"