[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "caruca"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
	"tqdm",
	"dspy-ai",
	"python-dotenv",
	"pydantic",
	"pillow"
]

[project.scripts]
caruca = "caruca:main"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = [
	"--import-mode=importlib"
]
